--- a/chapter.tex
+++ b/chapter.tex
@@ -21,38 +21,21 @@
 
 \begin{document}
 
-\begin{frontmatter}
-
-\title{Aire Guru: Making Pollution Data Accessible, Relevant, and Compelling.}
-
-\author{Luz Morales}
-\ead{luz@illuminous.io}
-\author{Antony Blakey}
-\ead{antony@illuminous.io}
-\address{Illuminous}
-
-\begin{abstract}
-\input{contents/abstract} 
-\end{abstract}   
-
-\begin{keyword}
-Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep Big Data
-\end{keyword}
-
-\end{frontmatter}
+\input{contents/frontmatter/_section}
 
 \newpage
 \tableofcontents
-\newpage
-\listoffigures
-\newpage
+
+% \newpage
+% \listoffigures
 
 \input{contents/introduction/_section} 
+\input{contents/preliminaries/_section} 
 \input{contents/accessible/_section} 
 \input{contents/relevant/_section} 
 \input{contents/compelling/_section} 
-\input{contents/evaluation} 
-\input{contents/conclusion} 
-\input{contents/references} 
+% \input{contents/evaluation/_section} 
+\input{contents/conclusion/_section} 
+\input{contents/references/_section} 
 
 \end{document}
