--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -1,4 +1,4 @@
-\subsection{Engagement}
+\subsection{Engage the user on an emotional level}
 It is a truism that you can lead a horse to water, but you can't make it drink. \\
 
 So it is with our users.
@@ -16,7 +16,7 @@ emotional impulses. We may wish the world to be a rational place driven by the c
 It is well known in advertising, PR, and politics, that emotion easily trumps reason - these fields have turned the art of emotional engagement into a scientific discipline.
 As have companies like Facebook, Apple and Google.
 
-\subsubsection{How to solve it}
+\subsubsection*{How to solve it}
 
 So, we must create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
 Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
@@ -32,17 +32,16 @@ effects. Where real-time data is available, allow users to set alarms so that th
 life in an ongoing fashion. It is important not to overdo that however - alerts that cannot be easily cancelled create a negative emotion that you
 definitely want to avoid. \\
 
-\subsubsection{How we solve it. Aire Guru}
+\subsubsection*{How we solve it. Aire Guru}
 
 Aire-Guru uses three specific techniques to generate emotional engagement:
 
 \begin{itemize}
 
     \item The simplest technique is the use of the colour red to indicate dangerous levels of pollutants, and green to indicate low levels.
-    Additionaly, we use a gas-mask/skull-and-crossbones icon to indicate an over-all dangerous level of pollutants.
+    Additionaly, we use a gas-mask icon to indicate an over-all dangerous level of pollutants.
 
-    \item By linking the pollutant levels to specific medical conditions, users get a very visceral interpretation of the data. This is, admittedly, an
-    extreme form of engagement.
+    \item By linking the pollutant levels to specific medical conditions, users get a very visceral interpretation of the data.
     
     \item Because we provide a facility to track pollutant levels over time, and link this data to a history of the user's physical location, we provide
     an ongoing narrative about the user's cumulative pollution exposure.
@@ -55,5 +54,3 @@ Aire-Guru uses three specific techniques to generate emotional engagement:
     \done
     \crossed
 \end{itemize}
-
-\newpage
