--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -1,4 +1,4 @@
-\subsection{Credibility and data quality}
+\subsection{Make sure your data is reliable}
 It is essential that the credibility of the dataset be impeccable. The source of the data must be reliable.
 Usually, in the description of the data, a section must be included where the origin of the dataset is explained.
 
@@ -39,7 +39,7 @@ Document \\
 \caption{Example source source document}
 \end{figure}
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 The first step is to compare the information with the source of origin. With the dataset and the definition
 of each of the fields, the scale and interpretability of the fields and values must be checked.
 Then we can perform different analysis of the data to check its consistency and compliance.
@@ -47,7 +47,7 @@ It is possible to use different graphs and see if there are extreme or strange v
 Database analysis tools can tell us the completeness of the fields, that is, what percentage of the
 samples contain each field.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 The source of data is verified by both the CEMI (Málaga information center) and UrbanClouds, the private company
 that collects and sends the data to the city of Málaga.
 With the description of the data in the open data portal of Málaga and the information received by UrbanClouds,
@@ -69,4 +69,3 @@ Using the analysis tools of MongoDBCompas and NoSQLBooster we verify the complet
     \done The completeness of the data has been analyzed.
     
 \end{itemize}
- \newpage
