--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -1,4 +1,4 @@
-\subsection{Advantage}
+\subsection{Solve a real problem}
 Once the relevance has been demonstrated, we consider the benefits and advantages that the use of the data as a user can bring us.
 This objective requires meticulous work both to discover it and to transmit these concepts to the user in a clear way,
 simple and direct and thus achieve a link that increases the curiosity of the user to deepen the subject and
@@ -14,14 +14,14 @@ When we have some data that is updated periodically, we must think in what way t
 changes Here comes the representation of the information in a way that awakens the need for data monitoring by
 of the user.
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 First of all discover in what way the data can help users. Next we have to find a way to let him see
 because they are important to him and how he can benefit from using them in his daily life.
 If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
 Conduct a market study and see if there are already products that offer this information. If this is the case, it will be analyzed because
 It is attractive to the user and try to improve it.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 The user is offered a platform that indicates his exposure to totally customized air pollution if the need to carry
 no device for reading pollutans.
 
@@ -45,7 +45,6 @@ user can view the exposure to the pollution to which he has been subjected.
       \end{tikzpicture}
       \caption{Collecting user location}
     \end{figure}
-    \newpage
     \begin{figure}[ht]
         \centering
         \includegraphics[width=8cm]{importedDataDecember}
@@ -62,4 +61,3 @@ user can view the exposure to the pollution to which he has been subjected.
     \crossed Presenting how exposure to pollution can be reduced more specifically
     
 \end{itemize}
-\newpage
