--- a/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
+++ b/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
@@ -1,4 +1,4 @@
-\subsection{User Experience}
+\subsection{The user interface must be obvious and familiar}
 The system can display the data in a precise, optimized, fully customized way. It can offer the user
  the possibility to improve their life considerably. However, if we do not provide a user friendly experience, all our efforts will be in vain.
  The user should feel that the system offers information in a fluid, intuitive, direct, straightforward manner and with
@@ -23,7 +23,7 @@ When we speak of fluidity, we refer to user-system interactions.It is important 
 be like a two-way conversation, where we ask and let them know we are listening and responding. When the user
 requires information from the system, they receive an indication that their request is being processed, and within no more than five seconds, an answer will be provided.
     
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
 The structure will entail a logical sequence, as if it were a narrative history.
 Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
@@ -31,7 +31,7 @@ We will steer clear of complicated representations, we will aim for familiarity 
 For example, if a calendar is used for the selection of dates, it doesn't make sense to use an hourglass, this will just be confusing forthe user.
 Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 Our tool uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
 We chose a range of blue shades in combination with white and gray to evoke a relaxed atmosphere.
 Importantly, we've taken care that all text has a good level of contrast with the background, so that it is easy to read.
@@ -58,7 +58,6 @@ that are identified and agree to share their location, Air Guru will show the po
 Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by pollutans. Finally, in the lower area where we have
 the historical data by area and personalization, we can visualize the information with different levels of detail; time, day, month and year. We can also
 select the date we want.
-\newpage
 \begin{figure}[ht]
     \centering
    \subfigure[Date filter]
@@ -116,4 +115,3 @@ select the date we want.
     \crossed Waiting times should be improved.
     
 \end{itemize}
-\newpage
