--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -1,4 +1,4 @@
-\subsection{Attractive}
+\subsection{Your site should look good}
 It is important that the information is attractive, eye-catching and with sparkle. This is not only important from a conceptual point of view, but also from a functional one. We saw this previously, where we considered the importance
 of good data presentation, using a structure that guides the user in a logical and orderly manner.
 
@@ -23,11 +23,11 @@ we want to highlight something in particular! \\
 To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
 Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
 It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
 to care of details and to present our identity.
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 As we commented previously the design has been based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles and using colors that contrast the information from the background.
 The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.
 
@@ -56,4 +56,3 @@ lower area where we will find the zone and custom history.
     \crossed Although there have been attempts to implement the design aesthetics that are now trending on the market, the design can be improved.
     
 \end{itemize}
-\newpage
