--- a/contents/introduction/_section.tex
+++ b/contents/introduction/_section.tex
@@ -1,8 +1,4 @@
+\newpage
 \section{Introduction}
-\input{contents/introduction/introduction.tex}
-\input{contents/introduction/motivation.tex}
-\input{contents/introduction/methodology.tex}
 
-
-
-
+% \input{contents/introduction/structure_of_this_document.tex}
