--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -1,4 +1,4 @@
-\subsection{Personalizacion}
+\subsection{Personalize the data for each user}
 So far we have seen different parameters to evaluate the relevant data at a general level. In this section, we will focus on the specific personal level.
 Each user has a unique personal situation, so we have to find a way to adapt and personalize the data, to provide both general and individually specific information.
 For example, if I was the user, my defining characteristics such as where I live,
@@ -11,14 +11,14 @@ more common.
 The key question we need to consider in order to be able to personalize the information, is how can the data be related at a specific time, in a specific place to meet specific needs of the
 user as an individual.
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 
 We should study how the data will help the user or user-subgroups and from this point, make it more specific. In this way
   we go from obtaining relevant data in a general way to be relevant in a personal way. We have to think about the
   particular user, and find a way to extract the results that are specifically adapted to them in a particular
   moment and place.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
  We are all interested in the pollution that surrounds us, since it affects our health. The tool
  Aire Guru has been designed to specialize in this area. For those people who are especially sensitive to air pollution, Aire Guru shows the air pollution with respect to the six most common medical conditions that
  are affected by air pollutans.
