--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -1,4 +1,4 @@
-\subsection{Design}
+\subsection{Present consequences and outcomes}
 To make a good selection in the dataset of the fields that are relevant or the combination of these, it is essential to
 solid knowledge on the subject to be treated. Therefore, it is fundamental to dedicate the necessary time to enter the
 importance of the concept, what benefits it can bring or what situations can dameage us.
@@ -16,12 +16,12 @@ The points that should be clear in the design phase are: \\
 \textbf{Data workflow}. When planning the flow of information, it must be clear how to get from one point to another. For example, 
 we should start simple and move to more complex representations.
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
 Following this, we need to analyze the data provided and see if the list of fields that the source offers us is sufficient to rech the chosen objective.
 If not directly, we the combination of them. Next, we decide which values are more outstanding and we will provide them to the user.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 Our main objective is to create awareness of the importance of air pollution in our health. For this we investigate different concepts:
 \begin{itemize}
     \item What diseases are affected by air pollution
@@ -52,7 +52,6 @@ At this point we know how air pollution affects our health, We make very clear w
 red. These colors are chosen in the palette of the colors provided by the EAQI.
 Height is used in graphics, since it is an intuitive representation for humans. In addition, the icon that represents unhealthy levels of pollution, is
 totally different, designed to clearly convey danger. \\
-\newpage
 \begin{figure}[ht]
     \centering
    \subfigure[BarChart Aire Guru]
@@ -77,6 +76,3 @@ totally different, designed to clearly convey danger. \\
      \done The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
          
 \end{itemize}
- 
-
-\newpage
