--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -1,4 +1,4 @@
-\subsection{Trustable}
+\subsection{Show the user that you are trustworthy}
 Trust between the platform we want to use and the user is essential.
 Therefore we will have to guarantee the protection of user privacy and promise that user data will be used only for specific purposes that the user clearly agrees to.
 We must minimize the risk of disclosing user data, and maintain user safety, confidentiality and integrity of information.
@@ -6,14 +6,14 @@ For this we must follow both the legal norms and an ethics of good practices.
 Do not require user identification merely to show general information.
 Always ask for permission to capture data and make clear what it will be used for.
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 Use secure platforms, such as SSL if we develop a web application.
 If we use third-party APIs, make sure to check the level of security they offer.
 Implement a system that does not allow linking the data with a user.
 Give the user the possibility to delete their data if they wish.
 
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 In our case, security is high, since for our main purpose, personal history
 of exposure to contamination, it is not essential to collect the user's details.
 SSL has been used to achieve a level of competent security, which guarantees the encryption of
@@ -32,7 +32,6 @@ To get this permission, one should require an explicit action. In our case, the 
 that we may determine their position. Of course the user can always revoke this permission and
 delete their data at any time. \\
 
-\newpage
 \begin{figure}[ht]
     \centering
    \subfigure[Location Access]
@@ -63,4 +62,3 @@ delete their data at any time. \\
          rather than use their email accounts, for fear of "information theft"
     
 \end{itemize}
-\newpage
