--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -1,4 +1,4 @@
-\subsection{Focus on the user}
+\subsection{Know your user}
 A large part of the objective outlined in section 3.1, design, is defined by the service that we want to offer
 to the user. Asssisting the user, (our client), is our primary purpose. \\
 
@@ -14,14 +14,14 @@ their needs, but also their wishes.
 
 Once the users have access to the data we provide, it is important to have a feedback process.
 It would be ideal to be able to perform an analysis of user behavior, to see their guidelines regarding the data obtained.
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 Define what type of user is intended. Study both their characteristics and the situation of the
 market.
 Use a mechanism that helps us obtain feedback, either by a system of points, test or
 an automatic mechanism that allows tracking the behavior of the user. We can also choose the combination of both
 options.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 Air Guru is aimed at the general population, therefore it's appropriate to present complete information in simple way. In addition, we pay special attention to users who may have a
 disease or medical condition, caused or affected by, air pollution.
 During the market study, we realized that many existing tools offered information about air pollution in real time, but we could see the following deficiencies:
@@ -58,6 +58,3 @@ user behavior, how many pages they access, and how long they stay on them. Also,
     \done Thanks to Aire Guru, users noticed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.
 
 \end{itemize}
- 
-
-\newpage
