--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -1,4 +1,4 @@
-\subsection{Usefull}
+\subsection{The facts, and just the facts}
 It is not unusual to make the mistake of trying to keep the user too much information, offering unneccessary or redundant data.
  
 This defeats the objective of being relevant to the user. We don't want the user to be distracted or lost in the middle
@@ -15,11 +15,11 @@ sure of his reading of the data, since when we direct the user to official sourc
 get a real explanation, reinforce the credibility of the representations we are making. In any case,
 outside of the main representation, because the user will not have to access this information continuously.
 
-\subsubsection{How to solve it} 
+\subsubsection*{How to solve it} 
 Focus on the objective, show only the data directly related to our goal, do not annotate the data
 simply because it appears in the dataset, and don't include distracting technical details irrelevant to the user.
 
-\subsubsection{How we solve it. Aire Guru} 
+\subsubsection*{How we solve it. Aire Guru} 
 
 The dataset used contains data such as the identifier of the measurement station, whether the station is fixed or mobile
 and extra-specific measures for an application that is provided by the same company that collects the data. This data is not useful for us.
@@ -34,7 +34,6 @@ In the following figure we see the difference between the zone history and the p
 the point where the measure was taken since it has been selected in the main map. We also like for the history of
 zone there is no filter for hours, since the measurements are reported every hour, this means that we will not find
 intermediate measures in the dataset.
- \newpage
 \begin{figure}[ht]
     \centering
     \includegraphics[width=11cm]{zoneRecords}
@@ -57,4 +56,3 @@ intermediate measures in the dataset.
          analyze the data and all the information is represented in a better format in the tool itself.
     
 \end{itemize}
- \newpage
