Refactoring, separated 'About Aire Guru'

--- a/chapter.tex
+++ b/chapter.tex
@@ -30,11 +30,11 @@
 % \listoffigures
 
 \input{contents/introduction/_section} 
+\input{contents/aire_guru/_section} 
 \input{contents/preliminaries/_section} 
 \input{contents/accessible/_section} 
 \input{contents/relevant/_section} 
 \input{contents/compelling/_section} 
-% \input{contents/evaluation/_section} 
 \input{contents/conclusion/_section} 
 \input{contents/references/_section} 
 
