--- a/contents/introduction/_section.tex
+++ b/contents/introduction/_section.tex
@@ -1,4 +1,18 @@
 \newpage
 \section{Introduction}
 
-% \input{contents/introduction/structure_of_this_document.tex}
+With the passage of the years we have seen in the processing of the data a golden opportunity, 
+both to improve our daily life and to try to predict
+future events. For this reason, the tendency arises to store all the data we have
+around us with the hope that one day they will be treated.
+As for the moment they have no specific purpose, everything is stored completely, without discrimination.
+Without knowing if at some point they will be useful or not. \\
+
+On the other hand, multiple companies, both public and private, including our governments, 
+in their commitment to transparency and / or hope to take advantage of it, they publish this data 
+periodically \\
+
+Although these data are available to all users, it does not mean that they are useful for the 
+average user, since he faces multiple challenges. \\
+
+\input{contents/introduction/structure_of_this_document.tex}
